fix(style): fix gap uncompatable (#2069)
* fix(style): fix gap uncompatable

* fix(style): fix radio gap incompatable

* fix(style): gap incompatable

--- a/src/list/style/index.less
+++ b/src/list/style/index.less
@@ -8,11 +8,9 @@
   flex-flow: column;
   margin: 0;
   padding: 8px;
-  row-gap: 4px;
-  @supports not (row-gap: 4px) {
-    &--item + &--item {
-      margin-top: 4px;
-    }
+
+  &--item + &--item {
+    margin-top: 4px;
   }
   &.@{cascader-prefix-cls}--list {
     .cascader-list-style();
