--- a/src/static-past-time-picker/style/QuickPicker.less
+++ b/src/static-past-time-picker/style/QuickPicker.less
@@ -10,7 +10,6 @@
       display: grid;
       grid-auto-rows: 36px;
       grid-template-columns: 144px 136px;
-      column-gap: 8px;
       .@{list-prefix-cls}--item {
         box-sizing: content-box;
       }
@@ -23,31 +22,24 @@
     padding: 8px 16px 16px 16px;
     &__button-group {
       display: flex;
-      gap: 5px;
       float: right;
-    }
-  }
-  @supports not (column-gap: 8px) and not (row-gap: 4px) {
-    .@{list-prefix-cls} {
-      display: grid;
-      .@{list-prefix-cls}--item {
-        margin: 4px 8px 0 0;
-        &:nth-of-type(2n) {
-          margin-right: 0;
-        }
-        &:nth-of-type(1) {
-          margin-top: 0;
-        }
-        &:nth-of-type(2) {
-          margin-top: 0;
-        }
+      button + button {
+        margin-left: 5px;
       }
     }
-    &__bottom {
-      &__button-group {
-        button + button {
-          margin-left: 5px;
-        }
+  }
+  .@{list-prefix-cls} {
+    display: grid;
+    .@{list-prefix-cls}--item {
+      margin: 4px 8px 0 0;
+      &:nth-of-type(2n) {
+        margin-right: 0;
+      }
+      &:nth-of-type(1) {
+        margin-top: 0;
+      }
+      &:nth-of-type(2) {
+        margin-top: 0;
       }
     }
   }
